--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,20 @@
   padding-bottom: 5%;
 }
 
+.front-navbar {
+  display: flex;
+  flex-direction: row;
+  padding-inline: 10%;
+}
+
+.navbar-brand.me-5 {
+  margin-right: 1rem !important;
+}
+
+.nav-link.me-3 {
+  margin-right: 1rem !important;
+}
+
 .Picture-Stack {
   width: 90%;
   height: 100%;
