Added page for Florence

--- a/src/App.css
+++ b/src/App.css
@@ -104,6 +104,18 @@
   background-color: #FF6700;
 }
 
+.lavender-pink {
+  background-color: #FFC2E2;
+}
+
+.baker-miller-pink {
+  background-color: #FF90B3;
+}
+
+.light-coral {
+  background-color: #EF7A85;
+}
+
 .text {
   font-size: 3vmin;   /* Customize the text size */
 }
