Added pages for siracusa

--- a/src/App.css
+++ b/src/App.css
@@ -140,6 +140,10 @@
   background-color: #8ACDEA;
 }
 
+.sky-dancer-blue {
+  background-color: #449AF7;
+}
+
 .bice-blue {
   background-color: #3A6EA5;
 }
@@ -150,6 +154,14 @@
 
 .klein-blue {
   background-color: #002FA7; /* Choose any color you like */
+}
+
+.indigo-dye {
+  background-color: #044B7F;
+}
+
+.aero-blue {
+  background-color: #06BEE1;
 }
 
 .prussia-blue {
@@ -193,7 +205,7 @@
 }
 
 .dark-pastel-orange {
-  color: #8F4B28;
+  background-color: #8F4B28;
 }
 
 .raspberry-red {
