Added pages for helsinki and siracusa

--- a/src/App.css
+++ b/src/App.css
@@ -220,8 +220,8 @@
   background-color: #CEBBC9;
 }
 
-.Bright-Yellow {
-  color: #F9DC24;
+.bright-yellow {
+  background-color: #F9DC24;
 }
 
 @keyframes App-logo-spin {
