Added page for ragusa

--- a/src/App.css
+++ b/src/App.css
@@ -212,6 +212,10 @@
   background-color: #CE2D4F;
 }
 
+.french-rose {
+  background-color: #F44174;
+}
+
 .blush-red {
   background-color: #CE6D8B;
 }
