Added pages for bologna, FL, Hannover, Houston, OSU and Virginia

--- a/src/App.css
+++ b/src/App.css
@@ -168,6 +168,10 @@
   background-color: #003153;
 }
 
+.phthalo-green {
+  background-color: #123524;
+}
+
 .cyan {
   background-color: #81D8D0;
 }
@@ -202,6 +206,10 @@
 
 .bordeaux-red {
   background-color: #4C0009;
+}
+
+.osu-scarlet {
+  background-color: #BA0C2F;
 }
 
 .dark-pastel-orange {
